# project_tracking

./: .dockerignore  .gitignore  CHANGELOG.md  Containerfile  Dockerfile  README.md  _version.py  alembic.ini  entrypoint.sh  manual-release.yml  pyproject.toml  requirement.txt
.github/workflows/: Dev-Container-Publish.yaml  PyTest-and-RH-build-publish.yml  PyTest.yml  Sync-dev-with-main.yml  Tag-and-Release.yml  Update-Version-and-create-Realeases-PR.yml  build_image.yml  reusable-docker-publish.yml  run_test.yml
c3g_project_tracking/: __init__.py  api.py  database.py  db.py  db_action.py  model.py
docs/: README.md
migration/alembic/: README  env.py
migration/alembic/versions/: 59326e3a20f2_add_indexes.py  64a560017524_convert_json_to_jsonb.py  943ea08a8a82_making_value_from_metric_nullable.py  cacb85b3d114_adding_state_for_file-add_indexes.py  cacb85b3d114_adding_state_for_file.py  d1dc98f61aee_major_changes.py
project_tracking/: __init__.py  __version__.py  api.py  database.py  db_action.py  generated_schemas.py  model.py  moh.py  schema.py  vocabulary.py
project_tracking/api/: __init__.py  admin.py  modification.py  project.py  version.py
project_tracking/db_actions/: __init__.py  digest.py  errors.py  ingest.py  modification.py  route.py  utils.py
project_tracking/static/css/: style.css
project_tracking/templates/: about.html  base.html  patients.html  projects.html  welcome.html
tests/: conftest.py  test_db.py  test_digestion.py  test_factory.py  test_ingestion.py  test_model.py  test_modification.py  test_route.py  test_serialization.py
tests/data/: delivery.json  event.csv  event.json  genpipes_rnaseqlight.json  genpipes_tumourpair.json  readset_file.json  run_processing.json  transfer.json
utils/: cleanup_orphans_dangling_deduplicates_files-jobs-metrics-operation.sql  consolidate_uri_endpoint.sql  deduplicate_files.sql  merge_topups_samples.sql  recompute_md5.sql  uniq_metrics.sql
