[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage]
run.branch = true
run.source = ["project_tracking"]

[project]
name = "project_tracking"
version = "0.0.1"
authors = [
  { name="P-O Quirion", email="po.quirion@mcgill.ca" },
  { name="Paul Streteowich", email="paul.stretenowich@mcgill.ca" },
]
description = "API and DB to track C3G assembler"
readme = "README.md"
requires-python = ">=3.10.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=2.2.2",
    "sqlalchemy>=2.0.25",
    "gunicorn>=20.1.0",
    "sqlalchemy-json>=0.5.0"
]

[project.urls]
"Homepage" = "https://github.com/C3G/project_tracking"
"Bug Tracker" = "https://github.com/pypa/project_tracking/issues"

[project.optional-dependencies]
tests = [
  "pytest",
  "coverage",
]
postgres = [
  "psycopg2-binary",
]
